--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -13,16 +13,22 @@ body{
     font-size: $fz20;
     line-height: 1.5;
     font-family: $eng;
+    a{
+        text-decoration: none;
+    }
+    img{
+        display: block;
+        width: 100%;
+    }
 }
 
 .header .hd_container{
     h1{
-        padding: 9px 10px;
+        padding: 9px 0;
     }
     .pc-menu{
         display: flex;
         align-items: center;
-        max-width: 455px;
         li{
             padding: 0 12px;
         }
@@ -32,6 +38,7 @@ body{
         a{
             color:$color-gray;
             font-family: $eng;
+            text-decoration: none;
         }
     }
     .mobile-menu-list{
@@ -39,19 +46,15 @@ body{
     }
     .mobile-menu{
         display: none;
-    }
-    .menu-cart{
         position: relative;
-        font-size: $fz24;
-        color: $color-gray;
-        padding: 0px 15px;
-        .cart-icon{
-            font-size: 40px;
-        }
+    }
+    .cart-icon{
+        font-size: 30px;
+    }
         span{
             position: absolute;
             top: 8px;
-            left: 50px;
+            left: 20px;
             font-size: 10px;
             color: $color-w;
             background-color: #916000;
@@ -59,17 +62,15 @@ body{
             border-radius: 40px;
             padding: 1px 5px;
         }
-    }
-    .menu-list{
-        padding: 12px 22px;
-    }
     @include mobile{
         .pc-menu{
             display: none;
         }
         .mobile-menu{
-            display: block;
+            display: flex;
+            align-items: center;
             color: $color-gray;
+
         }
         .mobile-menu-list{
             /*隱藏選單*/
@@ -78,7 +79,6 @@ body{
             opacity: 0;
             /*結束*/
             transition: opacity 1.8s;
-            margin-top: 20px;
             position: absolute;
             z-index: 100;
             top: 50px;
@@ -99,10 +99,6 @@ body{
                     color: $color-w;
                     font-family: $eng;
                     transition: 0.3s all;
-                    &:hover{
-                        background: $color-w;
-                        color: $color-gray;
-                    }
                 }
             }
         }
@@ -110,8 +106,118 @@ body{
             max-height: 280px;
             opacity: 1;
         }
-        h1{
-            padding-left: 20px;
+    }
+}
+
+.banner{
+    background: url(../img/banner.jpg) no-repeat padding-box;
+    background-size: cover;
+    background-position: center;
+    height: 870px;
+    .description{
+        font-family: $eng;
+        color:$color-w;
+        h2{
+            font-size: 40px;
+            line-height: 60px;
+            font-weight: bold;
+        }
+        p{
+            max-width: 455px;
+            font-size: $fz24;
+            line-height: $lh36;
+        }
+        a{
+            border: 2px solid $color-w;
+            border-radius: 30px;
+            color: $color-w;
+            font-size: 26px;
+            width: 350px;
+            display: block;
+            text-align: center;
+            padding: 9px 0;
+            margin-top: 16px;
+            transition: 0.7s all;
+            &:hover{
+                background: $color-w;
+                color:#916000;
+            }
+        }
+    }
+    @include pad{
+        height: 740px;
+        background-size: auto;
+        background-position: 15% 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    @include mobile{
+        height: 480px;
+        background-size: cover;
+    }
+}
+
+.content{
+    margin-top: 60px;
+    .text{
+        font-family: $eng;
+        max-width: 350px;
+        h2{
+            font-size: 32px;
+            line-height: 48px;
+            font-weight: bold;
+        }
+        p{
+            font-family: $chi;
+        }
+        a{
+            color: #916000;
+            font-family: $chi;
+            font-size: 16px;
+            line-height: 24px;
+        }
+        .content-btn{
+            border: 2px solid #000;
+            border-radius: 30px;
+            color: #000;
+            max-width: 350px;
+            display: block;
+            text-align: center;
+            padding: 15.8px 0;
+            margin-top: 16px;
+            font-weight:700;
+            font-family: $chi;
+            transition: 0.7s all;
+            &:hover{
+                background: $color-gray;
+                color: $color-w;
+            }
+        }
+    }
+    .long{
+        font-family: $eng;
+        img{
+            height: 1080px;
+        }
+        li{
+            margin-bottom: 52px;
+        }
+        h2{
+            font-size: 24px;
+            line-height: 36px;
+        }
+        p{
+            font-size: 16px;
+            line-height: 24px;
+        }
+    }
+    @include mobile{
+        .content{
+            margin-top: 40px;
+            .long img{
+                height: 680px;
+            }
         }
     }
 }
