--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -159,7 +159,7 @@ body{
 }
 
 .content{
-    margin-top: 60px;
+    margin: 60px 0;
     .text{
         font-family: $eng;
         max-width: 350px;
@@ -213,11 +213,161 @@ body{
         }
     }
     @include mobile{
-        .content{
-            margin-top: 40px;
-            .long img{
-                height: 680px;
-            }
+        margin-top: 40px;
+        .long img{
+            height: 680px;
+        }
+    }
+}
+
+.product{
+    background: #E0E0E0;
+    a{
+        max-width: 350px;
+        display: block;
+        margin-bottom: 8px;
+        transition: 0.1s all;
+        height: 540px;
+        &:hover{
+            outline: 2px solid #916000;
+        }
+        img{
+            height: 100%;
+        }
+    }
+    h3{
+        font-size: $fz24;
+        line-height: $lh36;
+        font-weight: 501;
+    }
+    p,h5{
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 300;
+        span{
+            color:$color-gray;
+            text-decoration: line-through;
+            margin-left: 8px;
+        }
+    }
+    h5{
+        margin-bottom: 24px;
+    }
+    .sold{
+        position: relative;
+    }
+    .sold-out{
+        position: absolute;
+        background:rgba(0,0,0,0.3);
+        width: 100%;
+        height: 100%;
+        z-index: 9999;
+        h4{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: $fz24;
+            line-height: $lh36;
+            color:$color-w;
+        }
+    }
+    @include pad{
+        a{
+            height: 420px;
+        }
+    }
+    @include mobile{
+        a{
+            height: 350px;
+        }
+    }
+}
+
+.feature{
+    .ad{
+        background: url('../img/index9.jpg') no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 520px;
+    }
+    .text{
+        h3{
+            font-size: 32px;
+            line-height: 48px;
+            font-weight: bold;
+        }
+        p{
+            font-size: 16px;
+            line-height: 24px;
+        }
+        a{
+            color: #AC8A46;
+        }
+    }
+    @include mobile{
+        .ad{
+            height: 520px;
+        }
+    }
+}
+
+.footer-banner{
+    background: url($pic-url+'index10.jpg') no-repeat;
+    background-size: 145%;
+    background-position: center;
+    height: 600px;
+    h2{
+        font-size: 32px;
+        line-height: 48px;
+        color:$color-gray;
+        padding-bottom: 20px;
+        font-weight: 501;
+        font-family: $chi;
+    }
+    .contact{
+        font-size: 16px;
+        line-height: 24px;
+        position: relative;
+        margin-bottom: 112px;
+        input{
+            border: 2px solid #916000;
+            padding: 16px 0 16px 16px;
+            width: 100%;
+        }
+        button{
+            position: absolute;
+            background: #916000;
+            border-color: #916000;
+            color:$color-w;
+            padding: 0 5%;
+            height: 60px;
+            right: 0;
+        }
+    }
+    @include mobile{
+        background-size: cover;
+        background-position: left;
+    }
+}
+
+.footer{
+    background-color: #916000;
+    color: $color-w;
+    .ft-logo{
+        padding-top: 18px;
+        padding-bottom: 18px;
+    }
+    li{
+        padding: 0 18px;
+        a{
+            color: $color-w;
+        }
+    }
+    @include mobile{
+        p{
+            font-size: 14px;
+            line-height: 21px;
         }
     }
 }
