--- a/scss/all.css
+++ b/scss/all.css
@@ -11669,7 +11669,7 @@ body img {
 }
 
 .content {
-  margin-top: 60px;
+  margin: 60px 0;
 }
 
 .content .text {
@@ -11737,11 +11737,188 @@ body img {
 }
 
 @media (max-width: 767px) {
-  .content .content {
+  .content {
     margin-top: 40px;
   }
-  .content .content .long img {
+  .content .long img {
     height: 680px;
+  }
+}
+
+.product {
+  background: #E0E0E0;
+}
+
+.product a {
+  max-width: 350px;
+  display: block;
+  margin-bottom: 8px;
+  -webkit-transition: 0.1s all;
+  transition: 0.1s all;
+  height: 540px;
+}
+
+.product a:hover {
+  outline: 2px solid #916000;
+}
+
+.product a img {
+  height: 100%;
+}
+
+.product h3, .product .h3 {
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 501;
+}
+
+.product p, .product h5, .product .h5 {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+}
+
+.product p span, .product h5 span, .product .h5 span {
+  color: #8D8D8D;
+  text-decoration: line-through;
+  margin-left: 8px;
+}
+
+.product h5, .product .h5 {
+  margin-bottom: 24px;
+}
+
+.product .sold {
+  position: relative;
+}
+
+.product .sold-out {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
+
+.product .sold-out h4, .product .sold-out .h4 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 24px;
+  line-height: 36px;
+  color: #FFF;
+}
+
+@media (max-width: 768px) {
+  .product a {
+    height: 420px;
+  }
+}
+
+@media (max-width: 767px) {
+  .product a {
+    height: 350px;
+  }
+}
+
+.feature .ad {
+  background: url("../img/index9.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 520px;
+}
+
+.feature .text h3, .feature .text .h3 {
+  font-size: 32px;
+  line-height: 48px;
+  font-weight: bold;
+}
+
+.feature .text p {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.feature .text a {
+  color: #AC8A46;
+}
+
+@media (max-width: 767px) {
+  .feature .ad {
+    height: 520px;
+  }
+}
+
+.footer-banner {
+  background: url("https://hexschool.github.io/webLayoutTraining1st/perfume-week6/index10.jpg") no-repeat;
+  background-size: 145%;
+  background-position: center;
+  height: 600px;
+}
+
+.footer-banner h2, .footer-banner .h2 {
+  font-size: 32px;
+  line-height: 48px;
+  color: #8D8D8D;
+  padding-bottom: 20px;
+  font-weight: 501;
+  font-family: PingFangTC-Regular, sans-serif;
+}
+
+.footer-banner .contact {
+  font-size: 16px;
+  line-height: 24px;
+  position: relative;
+  margin-bottom: 112px;
+}
+
+.footer-banner .contact input {
+  border: 2px solid #916000;
+  padding: 16px 0 16px 16px;
+  width: 100%;
+}
+
+.footer-banner .contact button {
+  position: absolute;
+  background: #916000;
+  border-color: #916000;
+  color: #FFF;
+  padding: 0 5%;
+  height: 60px;
+  right: 0;
+}
+
+@media (max-width: 767px) {
+  .footer-banner {
+    background-size: cover;
+    background-position: left;
+  }
+}
+
+.footer {
+  background-color: #916000;
+  color: #FFF;
+}
+
+.footer .ft-logo {
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
+
+.footer li {
+  padding: 0 18px;
+}
+
+.footer li a {
+  color: #FFF;
+}
+
+@media (max-width: 767px) {
+  .footer p {
+    font-size: 14px;
+    line-height: 21px;
   }
 }
 /*# sourceMappingURL=all.css.map */
