--- a/scss/_variable-self.scss
+++ b/scss/_variable-self.scss
@@ -4,6 +4,7 @@ $pad-width: 750px;
 $pic-url:'https://hexschool.github.io/webLayoutTraining1st/perfume-week6/';
 $color-w: #FFF;
 $color-gray: #8D8D8D;
+$color-br:#916000;
 $eng: -apple-system, BlinkMacSystemFont, sans-serif;
 $chi: PingFangTC-Regular, sans-serif;
 $fz20: 20px;
