--- a/scss/all.css
+++ b/scss/all.css
@@ -19,7 +19,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #0d6efd;
+  --bs-primary: #916000;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -3166,43 +3166,43 @@ fieldset:disabled .btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #916000;
+  border-color: #916000;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
+  background-color: #7b5200;
+  border-color: #744d00;
 }
 
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+  background-color: #7b5200;
+  border-color: #744d00;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(162, 120, 38, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(162, 120, 38, 0.5);
 }
 
 .btn-check:checked + .btn-primary,
 .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0a58ca;
-  border-color: #0a53be;
+  background-color: #744d00;
+  border-color: #6d4800;
 }
 
 .btn-check:checked + .btn-primary:focus,
 .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(162, 120, 38, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(162, 120, 38, 0.5);
 }
 
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #916000;
+  border-color: #916000;
 }
 
 .btn-secondary {
@@ -3493,36 +3493,36 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  color: #0d6efd;
-  border-color: #0d6efd;
+  color: #916000;
+  border-color: #916000;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #916000;
+  border-color: #916000;
 }
 
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(145, 96, 0, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(145, 96, 0, 0.5);
 }
 
 .btn-check:checked + .btn-outline-primary,
 .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #916000;
+  border-color: #916000;
 }
 
 .btn-check:checked + .btn-outline-primary:focus,
 .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(145, 96, 0, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(145, 96, 0, 0.5);
 }
 
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #0d6efd;
+  color: #916000;
   background-color: transparent;
 }
 
@@ -5337,13 +5337,13 @@ fieldset:disabled .btn {
 }
 
 .alert-primary {
-  color: #084298;
-  background-color: #cfe2ff;
-  border-color: #b6d4fe;
+  color: #573a00;
+  background-color: #e9dfcc;
+  border-color: #decfb3;
 }
 
 .alert-primary .alert-link {
-  color: #06357a;
+  color: #462e00;
 }
 
 .alert-secondary {
@@ -5750,19 +5750,19 @@ fieldset:disabled .btn {
 }
 
 .list-group-item-primary {
-  color: #084298;
-  background-color: #cfe2ff;
+  color: #573a00;
+  background-color: #e9dfcc;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #084298;
-  background-color: #bacbe6;
+  color: #573a00;
+  background-color: #d2c9b8;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #084298;
-  border-color: #084298;
+  background-color: #573a00;
+  border-color: #573a00;
 }
 
 .list-group-item-secondary {
@@ -7011,11 +7011,11 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-  color: #0d6efd;
+  color: #916000;
 }
 
 .link-primary:hover, .link-primary:focus {
-  color: #0a58ca;
+  color: #744d00;
 }
 
 .link-secondary {
@@ -7448,7 +7448,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-  border-color: #0d6efd !important;
+  border-color: #916000 !important;
 }
 
 .border-secondary {
@@ -8352,7 +8352,7 @@ fieldset:disabled .btn {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #0d6efd !important;
+  color: #916000 !important;
 }
 
 .text-secondary {
@@ -8408,7 +8408,7 @@ fieldset:disabled .btn {
 }
 
 .bg-primary {
-  background-color: #0d6efd !important;
+  background-color: #916000 !important;
 }
 
 .bg-secondary {
@@ -11919,6 +11919,61 @@ body img {
   .footer p {
     font-size: 14px;
     line-height: 21px;
+  }
+}
+
+.thin-banner {
+  background: #916000;
+}
+
+.thin-banner li a {
+  color: #FFF;
+  padding: 11px 24px 11px 0;
+}
+
+.login {
+  margin: 80px auto;
+}
+
+.login h2, .login .h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.login label {
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.login .login-img {
+  background: url("../img/login1.jpg") no-repeat;
+  background-size: 103%;
+  background-position: center;
+  height: 730px;
+}
+
+.login a {
+  color: #916000;
+  font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  .login {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 767px) {
+  .login {
+    margin-top: 40px;
+    margin-bottom: 100px;
+  }
+  .login .login-img {
+    background: url("../img/login1-mob.jpg") no-repeat;
+    background-size: 103%;
+    background-position: center;
+    height: 230px;
   }
 }
 /*# sourceMappingURL=all.css.map */
