--- a/scss/bootstrap/bootstrap-utilities.css
+++ b/scss/bootstrap/bootstrap-utilities.css
@@ -11,11 +11,11 @@
 }
 
 .link-primary {
-  color: #0d6efd;
+  color: #916000;
 }
 
 .link-primary:hover, .link-primary:focus {
-  color: #0a58ca;
+  color: #744d00;
 }
 
 .link-secondary {
@@ -448,7 +448,7 @@
 }
 
 .border-primary {
-  border-color: #0d6efd !important;
+  border-color: #916000 !important;
 }
 
 .border-secondary {
@@ -1352,7 +1352,7 @@
 
 /* rtl:end:remove */
 .text-primary {
-  color: #0d6efd !important;
+  color: #916000 !important;
 }
 
 .text-secondary {
@@ -1408,7 +1408,7 @@
 }
 
 .bg-primary {
-  background-color: #0d6efd !important;
+  background-color: #916000 !important;
 }
 
 .bg-secondary {
