--- a/scss/all.css
+++ b/scss/all.css
@@ -11999,6 +11999,12 @@ body img {
   font-size: 16px;
 }
 
+.product-list .pro p span {
+  color: #8D8D8D;
+  text-decoration: line-through;
+  margin-left: 8px;
+}
+
 .product-list .pro a {
   color: #916000;
 }
