--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -433,6 +433,11 @@ body{
         }
         p{
             font-size: 16px;
+            span{
+                color:$color-gray;
+                text-decoration: line-through;
+                margin-left: 8px;
+            }
         }
         a{
             color: $color-br;
